app/style/StakePool.less
@import (reference) "./main.less";
@import (reference) "./Icons.less";

.stakepool-content-nest-prefix-configured {
  font-size: 19px;
  text-transform: capitalize;
}

.stakepool-content-nest-stake-pool {
  border-top: 1px solid;
  border-bottom: 1px solid;
  margin-bottom: 1em;
  padding-top: 1em;
  padding-bottom: 1em;
}

.stakepool-content-nest-settings {
  margin-bottom: 1em;
}

.stakepool-content-nest-prefix-settings {
  .inline-block-mixin;

  font-size: 19px;
  text-align: right;
  text-transform: capitalize;
  width: 20%;
  vertical-align: top;
  padding-right: 0.5em;
}

.stakepool-content-nest-content-settings {
  .inline-block-mixin;

  font-size: 13px;
  width: 72%;
}

textarea.stakepool-content-nest-content-settings {
  height: 3em;
}

.stakepool-content-nest-prefix-confirm {
  width: 230px;
  padding-right: 15px;
  float: left;
  height: 100%;
  padding-top: 5px;
  font-size: 19px;
  text-align: right;
  text-transform: capitalize;
}

.stakepool-hide-config {
  float: right;
  margin-top: 10px;
}

.stakepool-add-title {
  margin-bottom: 15px;
  font-size: 20px;
  color: var(--stroke-color-hovered);
}

.stakepool-add-area {
  min-height: 150px;
  width: 740px;
  display:grid;
  grid-template-columns: auto 326px;
  max-width: 740px;
}

.stakepool-add-area-left {
  color: var(--title-text-and-button-background);
  background-color: var(--background-back-color);
  font-size: 13px;
  padding: 30px 30px 0 20px;
}

.stakepool-add-area-right {
  font-size: 13px;
  background-color: var(--disabled-background-color-dark);
  color:var(--wallet-label);
  padding: 30px 64px 10px 20px;

  a {
    color:var(--link-color);
  }  
}

.stakepool-field {
  margin-bottom: 30px;
  display:flex;
  flex-wrap: nowrap;  
}

.stakepool-field-label {
  min-width: 58px;
  width: 58px;
  text-align: right;
  margin-right: 5px;
}

.stakepool-field-value {
  width: 100%;
  height: 19px;
}

.stakepool-add-toolbar {
  text-align: right;
  margin-top: 20px;
  grid-column: 2;  
}

.stakepool-link-button-container{
  display: flex;
  align-items: center;
  margin-left:10px;
  .tooltipContainer{
    margin-left: 5px;
  }
}

.stakepool-add-not-redeemable {
  display: inline-block;
  margin-top: 5px;
  font-family: @font-family-monospaced;
  font-size: 11px;
  color: var(--filter-menu-bg-hover);
  text-decoration: underline;
  cursor: pointer;
}

.stakepool-add-apikey {
  padding:0;
  input {
    padding-left:10px;
    width: 100%;
    font-size:13px;
    line-height: 15px;
  }
}

.stakepool-confirm-button {
  padding: 18px 32px 18px 32px;
}

.stakepool-flex-height {
  background-color: var(--background-back-color);
  padding: 1em;
}

.stakepool-content-nest-from-address {
  margin-bottom: 2em;
}

.stakepool-link {
  color: var(--input-color);
  font-weight: bold;
  cursor: pointer;
}

.stakepool-content-send {
  margin-top: 1em;
}

// statistics css
.stakepool-unconfigured-select {
  .inline-block-mixin;

  width: 220px;
  font-size: 16px;
  float: right;
}

@media screen and (max-width: 1179px) {
  .stakepool-add-area{
    width: 634px;
    grid-template-columns: auto 316px;
  }     
  .stakepool-link-button-container{
    margin-left:0;
  }
  .stakepool-add-area-left{
    padding-right: 24px;
  }
  .stakepool-add-area-right{
     padding: 30px 44px 10px 30px;
  }
}


@media screen and (max-width: 768px) {
  .stakepool-add-area {
    grid-template-columns: 1fr;
    width: 355px;
  }  
  .stakepool-add-title{
    margin-left:16px;
    margin-bottom:20px;
  }
  .stakepool-add-toolbar {
    grid-column: 1;
    text-align: center; 
  }
  .stakepool-add-area-left{
    padding-right: 20px;
    padding-left: 38px;
  }
  .stakepool-add-area-right{
    padding: 30px 70px 10px 30px;
  }

}

